--- a/Micrograd_exercises.ipynb
+++ b/Micrograd_exercises.ipynb
@@ -284,7 +284,7 @@
         "    out = Value(log(self.data), (self,), 'log')\n",
         "\n",
         "    def _backward():\n",
-        "      self.grad += (1.0 / 2.7 )*(1.0 / self.data) * out.grad\n",
+        "      self.grad += (1.0 / self.data) * out.grad\n",
         "    out._backward = _backward\n",
         "    return out\n",
         "\n",
@@ -354,19 +354,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c040cf5-13a1-483d-fdd3-b4a48a94b4dc"
+        "outputId": "b8066bd6-4522-48d2-8995-01048391eeb5"
       },
-      "execution_count": 134,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Value(data=2.1755153626167147)\n",
-            "WRONG! for dim 0: expected 0.041772570515350445, yours returns 0.015471322413092757\n",
-            "WRONG! for dim 1: expected 0.8390245074625319, yours returns 0.3107498175787155\n",
-            "WRONG! for dim 2: expected 0.005653302662216329, yours returns 0.0020938158008208625\n",
-            "WRONG! for dim 3: expected -0.8864503806400986, yours returns -0.3283149557926292\n"
+            "OK for dim 0: expected 0.041772570515350445, yours returns 0.041772570515350445\n",
+            "OK for dim 1: expected 0.8390245074625319, yours returns 0.8390245074625319\n",
+            "OK for dim 2: expected 0.005653302662216329, yours returns 0.005653302662216329\n",
+            "OK for dim 3: expected -0.8864503806400986, yours returns -0.886450380640099\n"
           ]
         }
       ]
